# hypogum

./: .env.example  .gitignore  README.md  dev.py  pyproject.toml
design/: calendar-support.md
src/hypogum/: __init__.py  __main__.py  agent.py  config.py  mcp_server.py  store.py
src/hypogum/agent/: __init__.py  db.py  runner.py  scaffold.py  scheduler.py
src/hypogum/agent/observers/: __init__.py  base.py  camera.py  screen.py  user_input.py
src/hypogum/agent/processor/: __init__.py  analyzer.py  describe.py  pipeline.py  tips.py
src/hypogum/agent/prompts/: MEMORY.md  __init__.py  describe_prompt.md  ingest_prompt.md  proactive_prompt.md  tip_prompt.md
src/hypogum/agent/templates/: __init__.py  opencode.json
src/hypogum/agent/utils/: __init__.py  activity_detector.py  image_dedup.py  window_detector.py
src/hypogum/auth/: __init__.py  base.py  jwt.py  noauth.py  oauth2.py
src/hypogum/calendar/: __init__.py  ics.py  parse.py  view.py
src/hypogum/db/: __init__.py  base.py  local.py  remote.py  server.py
src/hypogum/db/auth/: __init__.py  jwt.py  noauth.py  oauth2.py
src/hypogum/db/relational/: __init__.py  base.py  engine.py
src/hypogum/db/vector/: __init__.py  chroma.py
src/hypogum/llm/: __init__.py  anthropic.py  base.py  gemini.py  openai.py
src/hypogum/memory/: __init__.py  agent.py  search.py  store.py
src/hypogum/observers/: __init__.py  base.py  camera.py  screen.py
src/hypogum/processor/: __init__.py  analyzer.py  pipeline.py  tips.py
src/hypogum/prompts/: analysis_prompt.md  analysis_schema.json  proactive_prompt.md  proactive_schema.json
src/hypogum/utils/: __init__.py  notifier.py  window_detector.py
src/hypogum/vector/: __init__.py  base.py  local.py  remote.py
tests/: test_calendar.py  test_image_dedup.py  test_pause_gate.py
