[project]
name = "hypogum"
version = "0.1.0"
description = "Standalone background agent with observer, processor, tip engine, and MCP endpoint"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
store = ["fastapi>=0.115", "uvicorn[standard]", "python-jose[cryptography]", "httpx>=0.27"]
agent = ["mss", "opencv-python", "pillow>=10.0"]
llm = ["google-genai>=1.0", "openai>=1.0", "anthropic>=0.34"]
mcp = ["mcp>=1.0"]
all = ["hypogum[store,agent,llm,mcp]", "aiosqlite>=0.20", "chromadb>=0.5"]
windows = ["pywin32>=310"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
hypogum = "hypogum.__main__:main"
