[project]
name = "hypogum"
version = "0.1.0"
description = "Standalone background agent with observer, processor, tip engine, and MCP endpoint"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
db = ["fastapi>=0.115", "uvicorn[standard]", "python-jose[cryptography]", "httpx>=0.27", "sqlalchemy[asyncio]>=2.0", "aiosqlite>=0.20", "asyncpg>=0.29", "chromadb>=0.5"]
agent = ["mss", "opencv-python", "pillow>=10.0", "httpx>=0.27"]
llm = ["google-genai>=1.0", "openai>=1.0", "anthropic>=0.34"]
mcp = ["mcp>=1.0", "httpx>=0.27"]
all = ["hypogum[db,agent,llm,mcp]"]
windows = ["pywin32>=310"]
dev = ["ruff>=0.6", "pytest>=8.0"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[project.scripts]
hypogum = "hypogum.__main__:main"
